--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-modernist
-title: دیلیمیز سایتې
+title: Dilimiz
+description: Turki literature
 fontname: Amiri-Regular
 fontsize: 18
 fontttf: /assets/Amiri-Regular.ttf
