--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-modernist
 title: Dilimiz
-description: Turki literature
+description: Turkic literature
 fontname: Amiri-Regular
 fontsize: 18
 fontttf: /assets/Amiri-Regular.ttf
