--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,5 @@ fontttf: /assets/Amiri-Regular.ttf
 fonteot: /assets/Amiri-Regular.eot
 fontwoff: /assets/Amiri-Regular.woff
 fontwoff2: /assets/Amiri-Regular.woff2
- 
+author: Arslan
+permalink: /blog/:year/:month/:day/:title
