--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,4 @@ fontwoff: /assets/Amiri-Regular.woff
 fontwoff2: /assets/Amiri-Regular.woff2
 author: Arslan
 permalink: /blog/:year/:month/:day/:title
+google_analytics: G-HF5NYF5MWQ
